# wencry

./: .gitignore  CMakeLists.txt  README.md  cloc.out  cmp  config.h.in  gmon.out  gp.out  main.cpp  makefile  out.txt  speedfile  test.cpp  testmd5  vpak.h  wencry  wincry.sln  wincry.vcxproj  wincry.vcxproj.filters  实践报告.md
.github/workflows/: c-cpp.yml  cmake-single-platform.yml
Wencry/: CMakelists.txt
Wencry/kernel/: CMakeLists.txt  execval.h
Wencry/kernel/src/: CMakeLists.txt  encry.cpp
Wencry/kernel/src/crypt/: aes.h  buffer.h  iobuffer.cpp  key.h  multi_buffergroup.h  multicry.h
Wencry/kernel/src/sha1/: CMakeLists.txt  shabuffer.h
Wencry/kernel/src/util/: CMakeLists.txt  ioprint.h  kutil.h  tab.h
Wencry/test/: CMakeLists.txt  test.cpp  test.h
Wencry/valget/: base64.h
include/: Autil.h  aes.h  cry.h  getval.h  key.h  multi_buffergroup.h  multicry.h  sha1.h  util.h  wenctrl.h
include/util/: base64.h  buffer.h  def.h  ioprint.h  struct.h  tab.h
kernel/: CMakeLists.txt  cry.cpp  cry.h  execval.cpp  execval.h  fheader.cpp  fheader.h
kernel/cryptfile/: CMakeLists.txt  cry.cpp  cry.h  decry.cpp  encry.cpp  hmac.cpp  hmac.h
kernel/cryptfile/hash/: hashmaster.cpp  hashmaster.h  hashtype.h  sha1.cpp
kernel/cryptfile/hash/hashbuf/: CMakeLists.txt
kernel/cryptfile/mcry/: CMakeLists.txt  multi_buffergroup.cpp  multi_buffergroup.h  multicry.cpp  multicry.h
kernel/cryptfile/mcry/MBG/: CMakeLists.txt  buffer.cpp  buffer.h  multi_buffergroup.cpp  multi_buffergroup.h
kernel/cryptfile/mcry/aes/: CMakeLists.txt  aes.cpp  aesmode.h
kernel/cryptfile/mcry/aesmode/: CMakeLists.txt  aesmode.cpp  aesmode.h
kernel/cryptfile/mcry/aesmode/aes/: CMakeLists.txt  aes.cpp  aes.h  de_aes.cpp  en_aes.cpp  key.cpp
kernel/cryptfile/mcry/aesmode/aes/utils/: macro.h  tab.h
kernel/cryptfile/multi_aes/: multi_buffergroup.cpp  multicry.cpp
kernel/cryptfile/multi_aes/aes/: aesmode.cpp  aesmode.h
kernel/cryptfile/multicrypt/: CMakeLists.txt  multicry.cpp  multicry.h
kernel/cryptfile/multicrypt/MBG/: buffer.cpp  buffer.h  multi_buffergroup.cpp  multi_buffergroup.h
kernel/cryptfile/multicrypt/aes/: CMakeLists.txt  aes.h  de_aes.cpp  en_aes.cpp  key.cpp  state.h  util.h
kernel/cryptfile/multicrypt/aes/include/: macro.h
kernel/cryptfile/multicrypt/aes/utils/: macro.h
kernel/cryptfile/sha1/: CMakeLists.txt  macro.h  sha1.cpp  sha1.h  sha1subclass.cpp
kernel/cryptfile/sha1/shabuf/: CMakeLists.txt  shabuffer.cpp  shabuffer.h
kernel/hash/: CMakeLists.txt  hashbuffer.cpp  hashbuffer.h  hashmaster.cpp  hashmaster.h  hashtype.h  md5.cpp  sha1.cpp  sha256.cpp
kernel/hash/hashbuf/: hashbuffer.cpp  hashbuffer.h
kernel/multi_aes/: CMakeLists.txt  multi_buffergroup.cpp  multi_buffergroup.h  multicry.cpp  multicry.h
kernel/multi_aes/aes/: CMakeLists.txt  aes.cpp  aes.h  aesmode.cpp  aesmode.h
kernel/resprint/: CMakeLists.txt  resprint.cpp  resprint.h
kernel/src/: CMakeLists.txt  cry.h  decry.cpp  encry.cpp
kernel/src/crypt/: CMakeLists.txt  de_aes.cpp  en_aes.cpp  key.cpp  multi_buffergroup.cpp  multicry.cpp  multicry.h
kernel/src/crypt/MBG/: CMakeLists.txt  buffer.h  iobuffer.cpp  multi_buffergroup.cpp
kernel/src/crypt/aeskey/: CMakeLists.txt  de_aes.cpp  en_aes.cpp  key.cpp  key.h
kernel/src/crypt/aeskey/include/: tab.h
kernel/src/sha1/: CMakeLists.txt  macro.h  sha1.cpp  sha1.h  shabuffer.h
kernel/src/util/: ioprint.cpp  ioprint.h  state.h
src/: aesd.c  aesd.cpp  aese.c  aese.cpp  base64.c  base64.cpp  buffer.c  buffer.cpp  cry.c  de_aes.cpp  decry.c  decry.cpp  en_aes.cpp  encry.c  encry.cpp  execval.cpp  getval.c  getval.cpp  iobuffer.cpp  ioprint.cpp  key.c  key.cpp  main.c  main.cpp  multi_buffergroup.cpp  multiaes.c  multicry.cpp  sha1.c  sha1.cpp  tab.c
test/: CMakeLists.txt  t2.txt  t2.txt.wenc  test.c  test.cpp  test.h  testCBC.cpp  testCFB.cpp  testCTR.cpp  testECB.cpp  testOFB.cpp  test_file.c  testaes.cpp  testbase64.cpp  testbig.cpp  testbig1.cpp  testfile.txt  testfile.txt.wenc  testhashspd.cpp  testhmac.cpp  testmd5.cpp  testsha1.cpp  testsha256.cpp  testshash.cpp  testsmall.cpp  testsmall1.cpp  testsmall2.cpp  testsmode.cpp  testspeed.cpp  testutest.cpp  testutil.cpp  testutil.h
valget/: CMakeLists.txt  base64.h  getopts.cpp  getval.cpp  getval.h  getval1.cpp  getval2.cpp  information.cpp  tab.h
valget/base64/: CMakeLists.txt  base64.cpp  base64.h  tab.h
wencry/: makefile  wencry
wencry/src/: aesd.c  cry.c  main.c  sha1.c
